--- a/sdk_quickstart/pubspec.yaml
+++ b/sdk_quickstart/pubspec.yaml
@@ -54,8 +54,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  assets:
-    - ../agora_manager/assets/config.json
+#  assets:
+#    - ../agora_manager/assets/config.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
