--- a/flutter_reference_app/pubspec.yaml
+++ b/flutter_reference_app/pubspec.yaml
@@ -29,8 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  agora_manager:
-    path: ../agora_manager
+  agora_rtc_engine: ^6.2.0
+  permission_handler: ^9.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
