--- a/flutter_reference_app/pubspec.yaml
+++ b/flutter_reference_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   agora_rtc_engine: ^6.2.0
   permission_handler: ^9.2.0
+  http: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,6 +53,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/config/config.json
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
