--- a/.gitignore
+++ b/.gitignore
@@ -861,3 +861,6 @@ Temporary Items
 # Archives         - https://github.com/github/gitignore/blob/main/Global/Archives.gitignore
 # Backup           - https://github.com/github/gitignore/blob/main/Global/Backup.gitignore
 # JEnv             - https://github.com/github/gitignore/blob/main/Global/JEnv.gitignore
+
+# Ignore the pubspec.lock file
+pubspec.lock
