--- a/flutter-reference-app/pubspec.yaml
+++ b/flutter-reference-app/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   permission_handler: ^9.2.0
   http: ^0.13.5
   image: ^4.1.3
+  path: 1.8.3
+  path_provider: ^2.1.1
 
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
