--- a/flutter-reference-app/assets/config/config.json
+++ b/flutter-reference-app/assets/config/config.json
@@ -1,7 +1,7 @@
 {
     "uid": 0,
-    "appId": "7b1cd27333b649dcaf18be777d1fdb7a",
-    "channelName": "demo123",
+    "appId": "<Your app Id>",
+    "channelName": "demo",
     "rtcToken": "",
     "proxyUrl": "<---- Your Proxy Server URL ---->",
     "serverUrl": "",
